# apzkr-pzpi-21-11-milennyi-ivan

./: .gitignore  README.md  apzkr-pzpi-21-11-milennyi-ivan.txt
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/: .env  Cargo.toml
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/: main.rs
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/configs/: api_doc.rs  configure.rs  logger_wrapper.rs  mod.rs  swagger_ui_wrapper.rs
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/db/: db_context.rs  mod.rs  service_error.rs
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/db/services/: breed_service.rs  feed_service.rs  feed_supply_service.rs  feeding_log_service.rs  mod.rs  (+5 more)
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/endpoints/: breed_endpoints.rs  feed_endpoints.rs  feed_supply_endpoints.rs  feeding_log_endpoints.rs  mod.rs  shearing_log_endpoints.rs  sheep_endpoints.rs  shepherd_endpoints.rs  storekeeper_endpoints.rs  temperature_scanner_endpoints.rs  utils.rs
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/json_structs/: authorize_json.rs  change_id_json.rs  mod.rs  path_id.rs  temperature_scanner_auth_json.rs  temperature_scanner_temp_json.rs
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/models/: breed.rs  feed.rs  feed_supply.rs  feeding_log.rs  mod.rs  shearing_log.rs  sheep.rs  shepherd.rs  storekeeper.rs  temperature_scanner.rs
apzkr-pzpi-21-11-milennyi-ivan/Task1-Server/src/view_models/: breed_vm.rs  feed_supply_vm.rs  feed_vm.rs  feeding_log_vm.rs  mod.rs  shearing_log_vm.rs  sheep_vm.rs  shepherd_vm.rs  storekeeper_vm.rs  temperature_scanner_vm.rs
(+116 files in other folders)
