[package]
name = "apz-pzpi-21-11-milennyi-ivan-task2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
async-trait = "0.1.80"
derive_more = "0.99.17"
serde_json = "1.0.117"
serde = {version = "1.0.203", features = ["derive"]}
sqlx = {version = "0.7.4", features = ["mysql", "runtime-async-std", "tls-native-tls"]}
uuid = "1.8.0"
validator = {version = "0.18.1", features = ["derive"]}
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
dotenv = "0.15.0"
log = "0.4.21"
flexi_logger = "0.28.1"
